[gd_scene load_steps=6 format=3 uid="uid://cqd3cj4fiwn4r"]

[ext_resource type="Script" path="res://Scripts/Tutorial_Screens/OLL1TutorialScene.gd" id="1_agiix"]
[ext_resource type="PackedScene" uid="uid://7xri88a85mp6" path="res://Scenes/Static_Cubes/oll1_left_cube.tscn" id="2_aqm1i"]
[ext_resource type="FontFile" uid="uid://mh0471bkk7ti" path="res://Assets/Fonts/Digital.ttf" id="2_qtwjr"]
[ext_resource type="PackedScene" uid="uid://b0ng6llo3v1fb" path="res://Scenes/cube_controller.tscn" id="3_nwue5"]
[ext_resource type="PackedScene" uid="uid://lgm0q242c3lh" path="res://Scenes/Static_Cubes/oll1_center_cube.tscn" id="5_k1ifu"]

[node name="OLL1TutorialScene" type="Node3D"]
script = ExtResource("1_agiix")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.884581, 0.466387, 0, -0.466387, 0.884581, 0, 0, 0)
fov = 52.2

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Camera3D"]
light_energy = 0.895

[node name="MiniCubes" type="Node3D" parent="."]

[node name="MiniLeftCube" parent="MiniCubes" instance=ExtResource("2_aqm1i")]
transform = Transform3D(0.994522, 0.104528, 0, -0.103511, 0.984843, 0.139173, 0.0145476, -0.138411, 0.990268, -54.725, -55.465, -60.01)

[node name="OLL1Label" type="Label" parent="."]
offset_top = 7.0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_qtwjr")
theme_override_font_sizes/font_size = 45
text = "Orient Top Layer Edges (OLL pt.1)"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Algorithm1" type="Label" parent="."]
offset_top = 7.0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_qtwjr")
theme_override_font_sizes/font_size = 45
text = " F R U R' U' F'"

[node name="Algorithm2" type="Label" parent="."]
offset_top = 139.0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_qtwjr")
theme_override_font_sizes/font_size = 32
text = "F R U R' U' F' U2 F U R U' R' F'"
horizontal_alignment = 1

[node name="Algorithm3" type="Label" parent="."]
offset_top = 7.0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_qtwjr")
theme_override_font_sizes/font_size = 45
text = "F U R U' R' F' "
horizontal_alignment = 2

[node name="CubeController1" parent="." groups=["Controllers"] instance=ExtResource("3_nwue5")]
transform = Transform3D(0.977784, 0, -0.209619, 0, 1, 0, 0.209619, 0, 0.977784, -16.287, -12.48, -27.566)

[node name="CubeController2" parent="." groups=["Controllers"] instance=ExtResource("3_nwue5")]
transform = Transform3D(0.843392, 0, -0.5373, 0, 1, 0, 0.5373, 0, 0.843392, 0.459, -14, -25.628)

[node name="CubeController3" parent="." groups=["Controllers"] instance=ExtResource("3_nwue5")]
transform = Transform3D(0.643245, -0.284573, -0.710813, 0.203738, 0.958511, -0.199368, 0.738056, -0.0165769, 0.674536, 17.29, -14.3, -28.228)

[node name="OLL1LeftCube" parent="." instance=ExtResource("2_aqm1i")]

[node name="OLL1CenterCube" parent="." instance=ExtResource("5_k1ifu")]
